crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__funcenum_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/typedefs.rs
assertion_line: 149
expression: "goto_definition(r#\"\n%! main.sp\nfuncenum Foo {\n    int:public(foo),\n                |\n                ^\n    int:public(foo, bar),\n\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 15
      },
      "end": {
        "line": 1,
        "character": 18
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 15
      },
      "end": {
        "line": 1,
        "character": 18
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 15
      },
      "end": {
        "line": 1,
        "character": 18
      }
    }
  }
]
