crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__typedefs__typedef_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/typedefs.rs
assertion_line: 30
expression: "goto_definition(r#\"\n%! main.sp\nenum Bar {}\ntypedef Foo = function Bar ();\n                        |\n                        ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 23
      },
      "end": {
        "line": 1,
        "character": 26
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 5
      },
      "end": {
        "line": 0,
        "character": 8
      }
    }
  }
]
